# bt-dongle-with-pc-wake

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
docs/: disable_tenda_aic8800_bluetooth.md  hardware_wiring.md  host_native_bluetooth_sync.md  linux_hci_transport_reference.md  linux_test_plan.md  standby_hci_host_mode.md  troubleshooting.md
include/: board_config.h  bootsel_button.h  debug_log.h  h4_parser.h  hci_host_minimal.h  hci_packet.h  hci_transport.h  power_supervisor.h  usb_bth_bridge.h  usb_hid_wake.h  wake_policy.h
src/: backend_cyw43.c  backend_esp32_uart.c  backend_stub.c  bootsel_button.c  debug_log.c  h4_parser.c  hci_host_minimal.c  main.c  power_supervisor.c  tusb_config.h  usb_bth_bridge.c  usb_descriptors.c  usb_hid_wake.c  wake_policy.c
systemd/: bluez-paired-le-autoconnect.service  bluez-paired-le-autoconnect.timer  bt-wake-sync.path  bt-wake-sync.service
tools/: bluez-paired-le-autoconnect.sh  bt-wake-sync.py  disable-tenda-aic8800-bluetooth.sh  install-bt-wake-sync.sh
